# rich_theme_manager

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: python-package.yml
rich_theme_manager/: __init__.py  __main__.py  manager.py  theme.py
tests/: conftest.py  test_rich_theme_manager.py
